Update to Java 21, Spring Boot 3.4.1, Apache TomEE 10, MP 6.0